quote image not showing problem solved

--- a/styles/style.css
+++ b/styles/style.css
@@ -366,7 +366,7 @@ nav .btn:hover{
   box-sizing: border-box;
   border: 1px solid rgba(14, 14, 14, 0.15);
   border-radius: 16px;
-  background: url(/images/quote-bg.png), rgb(255, 255, 255);
+  background: url(https://i.ibb.co.com/BNZK4vk/quote-bg.png), rgb(255, 255, 255);
   background-position: 24px 24px;
   background-repeat: no-repeat;
   z-index: 100;
